
0.27 to be released
    + The Javascript code now catches eval() errors and
      returns a structured exception to Perl. The
      Perl interface does not change.
      This brings ca. 10% speed increase

    + More UTF-8 handling on the Perl side of the connection. All
      received strings are now actively decoded to unicode strings
      before being handed to JSON.pm

0.26 20110502
    ! Bugfix: Actually process the C<bufsize> parameter again

0.25 20110426
    . Add CLEAR method to tied objects so now list-assignment
      to a hash works:
      
          %$foo = (Just => 'another', Javascript => 'Hacker');
          $foo->{Just} # another
          $foo->{Javascript} # Hacker
          
    . Add the C<bufsize> parameter to ->install_bridge
      for setting the Net::Telnet buffer size
    . Don't list MozRepl::RemoteObject::Methods in carp()
    . More method implementation moved to ::Methods

0.24 20110416
    . Redo connect logic in ->setup, so that we handle cases
      where MozRepl is unavailable gracefully.

0.23 20110415
    . Fix test failures
    . Postpone deprecation period of methods added to JS objects
      a bit. All methods will remain until after 0.25.

0.22 20110411
    . Added experimental AnyEvent-compatible backend MozRepl::AnyEvent
      This backend does not yet support asynchronous execution. It
      just plays well with other AnyEvent-enabled modules.
      It is not automatically loaded.
    ! Start of deprecation cycle for methods injected to the JS objects.
      ->__xpath will be moved to MozRepl::RemoteObject::Util::xpath
      Change
          $obj->__xpath(...)
      to
          $obj->MozRepl::RemoteObject::Util::xpath( ... )
      This makes the object cleaner and you shouldn't have many places
      where you call C<< ->__xpath >> anyway, as it is not available on
      most JS objects anyway.
      
      This method will go away in 0.23.

0.21 20110109